packages/@winglang/wingc/src/lsp/snapshots/hovers/variadic_args.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight addMany(...items: Array<str>): void\n```"
range:
  start:
    line: 8
    character: 6
  end:
    line: 8
    character: 13

